[package]
name = "mdl"
version = "0.1.0"
authors = ["Leonardo Marmol <lmarmol@momentos.life>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
futures = "0.3"
reqwest = {version = "0.10.4", features = ["json"]}
rpassword = "4.0.5"
serde = {version = "1.0.108", features = ["derive"]}
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"